# Omni-Detect-Platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
backend/: HANDOFF.md  README.md  infer_lisa.py  prepare_inputs.py  run.py  run_baselines.sh  setup.sh
frontend/: index.html  package.json
frontend/scripts/: build-pages.mjs  preview-pages.mjs
frontend/src/: App.js  config.js  main.js
frontend/src/components/: DetectionForm.js  FileResultViewer.js  ImageResultViewer.js  JobHistoryPanel.js  JobStatusCard.js  ProbabilityBadge.js  ResultSummary.js  TextResultViewer.js
frontend/src/services/: apiDetectionService.js  backendDetectionService.js  detectionClient.js  mockDetectionService.js
frontend/src/styles/: app.css
frontend/src/types/: detection.js  detectionService.js
frontend/src/utils/: format.js
omni_detect/: __init__.py  config.py  jobs.py  runpod.py  scheduler.py  schemas.py
omni_detect/api/: app.py  errors.py  routes.py
tests/: __init__.py  conftest.py  test_api.py  test_jobs_scheduler.py  test_runpod_http.py
