[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-detect-platform"
version = "0.1.0"
description = "Backend MVP foundation for Omni-Detect AI-generated content detection."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
